🚀 MAJOR: Replace CLI with Tally form integration
✨ Features: Tally form export integration, automatic config parsing, robust module handling, smart image detection, reset functionality

🔧 Changes: New generate-from-config.js, JSON/Markdown support, enhanced validation, ES modules, updated docs

📋 Scripts: npm run generate (Tally), npm run generate:cli (legacy), npm run reset (defaults)

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,13 @@ coverage/
 # Temporary folders
 tmp/
 temp/
+
+# Input files (may contain sensitive client data)
+input/site-config.json
+input/site-config.md
+input/config.json
+input/config.md
+
+# Keep sample files
+!input/site-config.sample.json
+!input/README.md
