🎯 MAJOR: Intégration Tally API complète
✨ Nouvelles fonctionnalités:
- Import automatique via API Tally (submissionId)
- Téléchargement optionnel des assets (logo/hero)
- Mapping intelligent des champs Tally → config
- Gestion robuste des modules optionnels
- Reset amélioré avec préservation assets
- Support dotenv pour secrets API

🔧 Nouveaux outils:
- tools/tally-pull.mjs (import API + download)
- .env.example (template configuration)
- TALLY-FORM-TEMPLATE.md (guide formulaire)
- assets/clients/ (stockage assets téléchargés)

📋 Scripts npm:
- npm run tally:pull -- --id=ID [--download]
- npm run reset (préserve assets clients)

📚 Documentation:
- README complet avec exemples Tally
- Mapping des champs détaillé
- Troubleshooting et best practices
- Template formulaire MVP (7-15 questions)

🎯 Workflow professionnel:
1. Client remplit formulaire Tally
2. npm run tally:pull -- --id=XXX --download
3. npm run generate
4. npm run dev → validation
5. npm run build → déploiement

✅ 100% compatible avec logique existante
✅ Defaults sensibles pour champs manquants
✅ Gestion gracieuse des erreurs
✅ Production-ready pour agences

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ dist/
 .env.test.local
 .env.production.local
 
+# Tally API keys
+.env.local
+
 # OS generated files
 .DS_Store
 .DS_Store?
@@ -56,3 +59,8 @@ input/config.md
 # Keep sample files
 !input/site-config.sample.json
 !input/README.md
+
+# Client assets (downloaded from Tally)
+# Note: These are preserved during reset but can be cleaned manually
+assets/clients/
+!assets/clients/.gitkeep
