🎯 FEATURE: Système 3 offres commerciales automatiques + Fix API Tally
✨ Nouvelles fonctionnalités:
- Génération automatique de 3 offres tarifaires (LITE/STANDARD/PREMIUM)
- Page comparatif HTML interactive pour présentation client
- Système de pricing tiers depuis 1 formulaire Tally
- Modules activés/désactivés selon l'offre choisie

🐛 Corrections:
- Fix endpoint API Tally (submissions au lieu de responses)
- Fix parsing des réponses Tally (questions + submission.responses)
- Correction authentification Bearer token

💼 Business Model:
- LITE (299€): Site essentiel - Hero, Services, FAQ, Contact
- STANDARD (499€): +Galerie, Avis, Bandeau urgence, Descriptions
- PREMIUM (799€): +Tarifs, Garanties, À propos étendu, Certifications

🔧 Nouveaux outils:
- tools/generate-offers.mjs (génération 3 versions)
- offers/comparatif.html (présentation client visuelle)
- offers/*.json (configs par offre)

📋 Script npm:
- npm run generate:offers (génère les 3 offres)

🎯 Workflow commercial:
1. Client remplit formulaire Tally une fois
2. npm run tally:pull -- --id=XXX
3. npm run generate:offers
4. Ouvrir offers/comparatif.html
5. Client choisit LITE/STANDARD/PREMIUM
6. Build l'offre choisie
7. Deploy et facturation selon choix

✅ Upsell automatique sans effort
✅ Présentation visuelle professionnelle
✅ 1 formulaire = 3 propositions commerciales

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "eleventy",
     "generate": "node tools/generate-from-config.js",
     "generate:cli": "node tools/generate.js",
+    "generate:offers": "node tools/generate-offers.mjs",
     "tally:pull": "node tools/tally-pull.mjs",
     "reset": "node tools/reset.js"
   },
