--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ input/config.md
 # Note: These are preserved during reset but can be cleaned manually
 assets/clients/
 !assets/clients/.gitkeep
+
+# Generated offers (client-specific)
+offers/*.json
+!offers/comparatif.html
