✨ feat: Page sélection d'offres avec design premium tekNa Studio
🎨 Design & UX Marketing:
- Page /offres/ intégrée dans Eleventy (accessible localhost:8080/offres/)
- Design minimaliste fond blanc style tekNa Studio
- Logo tekNa Studio en header (responsive: 140px mobile → 200px desktop)
- Layout responsive mobile-first (1 colonne → 3 colonnes desktop)
- Accent couleur rose pêche du logo (#E8B4B8)

💎 Offre Standard Featured (optimisée conversion):
- Prix MASSIF 4.5rem avec gradient or rosé (point focal visuel)
- Letter-spacing négatif pour impact maximal
- Badge rose "Recommandé" immédiatement visible
- Border rose accent (2px solid #E8B4B8)
- Background gradient subtil blanc → rose pâle
- Titre rose bold (fw-800)
- Description renforcée (fw-500, #333)
- Scale 1.02 pour attirer l'œil
- Ombre premium (0 20px 60px)
- Symbole € coloré en rose gold

📊 Système 3 offres:
- LITE (299€): Site essentiel - Hero, Services, FAQ, Contact
- STANDARD (499€): Recommandé - +Galerie, Avis, Bandeau urgence, Descriptions
- PREMIUM (799€): Complet - +Tarifs, Garanties, À propos, Certifications

🔧 Technique:
- src/offres.njk (utilise layout base.njk)
- src/_data/offers.json (données structurées des 3 offres)
- src/_includes/offers-layout.njk (supprimé - utilise base.njk)
- Previews fonctionnels vers /previews/{lite|standard|premium}/
- CSS inline optimisé pour performance
- Hover effects subtils et professionnels

🛠️ Intégration Tally complète:
- tools/tally-pull.mjs (FIX endpoint API /submissions/{id})
- tools/generate-offers.mjs (génération automatique 3 versions)
- .eleventy.js (passthrough des previews)
- Workflow: tally:pull → generate:offers → previews prêts

✅ Mobile-first, clean, vendeur, professionnel
✅ Prix optimisé pour conversion (hiérarchie visuelle marketing)
✅ Design system cohérent avec identité tekNa Studio
✅ UX fluide avec previews intégrés

--- a/.gitignore
+++ b/.gitignore
@@ -67,4 +67,6 @@ assets/clients/
 
 # Generated offers (client-specific)
 offers/*.json
+offers/previews/
 !offers/comparatif.html
+!offers/navigation.html
