🎯 feat: Système de choix client complet
📱 Page /choix/ pour confirmation:
- Récapitulatif du pack choisi
- Détails prix/délai/modules
- Prochaines étapes claires
- Contact tekNa Studio

🔄 Workflow SMS → Choix → Récupération:
1. Client reçoit SMS avec lien /offres/
2. Client clique "Choisir cette offre"
3. Redirection vers /choix/?pack=standard&client=Nom
4. Confirmation + transmission automatique

📊 Récupération côté tekNa:
- npm run choices (voir tous les choix)
- choices.json (backup local)
- Timestamp + détails pack

🎨 UX optimisée:
- Boutons "Choisir cette offre" (plus clair)
- Page confirmation rassurante
- Contact direct visible
- Pas de preview, choix direct

✅ Workflow complet SMS → choix → récupération

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate:cli": "node tools/generate.js",
     "generate:offers": "node tools/generate-offers.mjs",
     "tally:pull": "node tools/tally-pull.mjs",
-    "reset": "node tools/reset.js"
+    "reset": "node tools/reset.js",
+    "choices": "node tools/get-choices.mjs"
   },
   "keywords": [
     "eleventy",
