🤖 feat: Workflow 100% automatisé + Helper commandes
🚀 Commande magique - npm run auto:
- Récupère dernière soumission Tally
- Génère site avec placeholders métier
- Crée 3 offres (LITE/STANDARD/PREMIUM)
- Prêt à envoyer au client par SMS
- Tout en 1 commande !

📚 Helper commandes - npm run help:
- Liste toutes les commandes disponibles
- Workflow typique expliqué
- Categories: Workflow/Import/Generation/Dev/Utils
- Design CLI professionnel

🔧 Commandes ajoutées:
- npm run auto (workflow complet)
- npm run help (documentation)
- npm run tally:list (liste soumissions)
- npm run choices (voir choix clients)

📱 Workflow zero-friction:
1. Prospect remplit Tally
2. npm run auto
3. npm run dev (vérification)
4. SMS avec lien /offres/
5. npm run choices (récupération choix)

✅ Plus besoin de solliciter personne
✅ Workflow entièrement automatisé
✅ Placeholders intelligents par métier
✅ 3 offres générées automatiquement

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "generate:offers": "node tools/generate-offers.mjs",
     "tally:pull": "node tools/tally-pull.mjs",
     "reset": "node tools/reset.js",
-    "choices": "node tools/get-choices.mjs"
+    "choices": "node tools/get-choices.mjs",
+    "auto": "node tools/tally-auto.mjs",
+    "help": "node tools/help.mjs",
+    "tally:list": "node tools/list-submissions.mjs"
   },
   "keywords": [
     "eleventy",
