🎨 MVP Démos complet : 9 pages démo (3 métiers × 3 packs) + navigation + mentions légales
✨ Nouveautés :
- 9 pages démo fonctionnelles (dépanneur, électricien, serrurier × lite/standard/premium)
- Page navigation racine avec sélection métier
- Page mentions légales universelle
- Footer avec téléphone corrigé
- Google Maps conditionnel (standard/premium uniquement)
- Bouton retour transparent en bas à droite
- Descriptions offres cohérentes avec démos réelles
- Prix ajustés : 250€ / 350€ / 400€

🧹 Nettoyage :
- Suppression pages test (test-banner, test-integration, etc.)
- Suppression pages obsolètes (demos.njk, offres.njk, choix.njk, work.njk)
- .gitignore mis à jour (backups, fichiers temporaires)

📦 Architecture :
- Presets démo dans src/_data/demos/
- 9 sections modulaires complètes
- Pack features centralisé
- Footer conditionnel selon pack

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,12 @@ offers/*.json
 offers/previews/
 !offers/comparatif.html
 !offers/navigation.html
+
+# Backups
+.backups/
+presets_backup/
+tools_backup/
+
+# Temporary files
+0
+choices.json
