--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate": "node tools/generate-from-config.js",
     "generate:cli": "node tools/generate.js",
     "generate:offers": "node tools/generate-offers.mjs",
+    "generate:demos": "node scripts/generate-demos.mjs",
     "tally:pull": "node tools/tally-pull.mjs",
     "reset": "node tools/reset.js",
     "choices": "node tools/get-choices.mjs",
